src/objects/WinAtPOSRemoteActions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings which are used in backend for WinAtPOS application</description>
    <fields>
        <fullName>Default_Image_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Default image size if asset don&apos;t have primary image</description>
        <inlineHelpText>Default image size if asset don&apos;t have primary image</inlineHelpText>
        <label>Default Image Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Image_Url__c</fullName>
        <defaultValue>&apos;/resource/winatposapp/images/emptydetail.png&apos;</defaultValue>
        <description>Default Image Url if asset don&apos;t have primary image defined</description>
        <inlineHelpText>Default Image Url if asset don&apos;t have primary image defined</inlineHelpText>
        <label>Default Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_file_size__c</fullName>
        <description>Maximal files size which can be attached into pdf file</description>
        <inlineHelpText>Maximal files size which can be attached into pdf file</inlineHelpText>
        <label>Max file size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF_Asset_Collection_Limit__c</fullName>
        <description>This custom setting set limit for maximal number of asset which can be displayed  for search pdf. Cuttent limit is 1000 rows because page using apex:repeat tag which not allow for bigger collection</description>
        <label>PDF Asset Collection Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WinAtPosGroup__c</fullName>
        <description>Setting used to define Chatter group for WinAtPOS application</description>
        <label>WinAtPosGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WinAtPOSRemoteActions</label>
</CustomObject>